# zhichuang_ai

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml
.github/: PULL_REQUEST_TEMPLATE.md
backend/: .dockerignore  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/ai/graphs/: __init__.py  code_analysis.py
backend/app/ai/nodes/: __init__.py
backend/app/ai/prompts/: README.md
backend/app/ai/providers/: base.py  mock.py
backend/app/api/: router.py
backend/app/api/routes/: academic.py  agent.py  assignments.py  auth.py  evaluations.py  growth.py  health.py  knowledge.py  tasks.py
backend/app/core/: config.py
backend/app/db/: __init__.py  session.py
backend/app/evaluation/: __init__.py
backend/app/models/: __init__.py  assignment.py  course.py  evaluation.py  knowledge.py  plan.py  profile.py  task.py  user.py
backend/app/rag/: pipeline.py
backend/app/schemas/: academic.py  agent.py  assignments.py  auth.py  evaluations.py  growth.py  knowledge.py  tasks.py
backend/app/services/: academic_service.py  agent_service.py  assignment_service.py  auth_service.py  evaluation_service.py  growth_service.py  knowledge_service.py  repository_fetch_service.py  submission_archive_service.py  task_service.py
backend/app/tasks/: __init__.py
backend/tests/: conftest.py  test_academic.py  test_agent.py  test_assignments.py  test_auth.py  test_evaluations.py  test_growth.py  test_knowledge.py  test_tasks.py
data/: README.md
docs/: API设计.md  ROADMAP.md  三赛题验收矩阵.md  交付验收报告.md  公网Demo部署.md  (+9 more)
(+90 files in other folders)
