[project]
name = "zhichuang-agent-backend"
version = "0.1.0"
description = "Backend for 智创Agent"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "sqlalchemy>=2.0.0",
  "alembic>=1.13.0",
  "python-multipart>=0.0.9",
]

[project.optional-dependencies]
ai = [
  "langgraph>=0.2.0",
]
rag = [
  "chromadb>=0.5.0",
  "pypdf>=4.3.0",
  "python-docx>=1.1.0",
  "openpyxl>=3.1.0",
]
dev = [
  "pytest>=8.3.0",
  "httpx>=0.27.0",
  "ruff>=0.6.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["alembic*", "tests*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
